# linear-slider

./: .gitignore  .setup_assistant  CMakeLists.txt  README.md  package.xml  submission.md
config/: linear_slider.ros2_control.xacro  (+3 more)
linear_slider_bringup/: CMakeLists.txt  README.md  package.xml
linear_slider_bringup/config/: linear_slider_controllers.yaml  linear_slider_velocity_controller.yaml  test_goal_publishers_config.yaml  test_velocity_goal_publishers_config.yaml
linear_slider_bringup/launch/: launch_rviz.launch.py  linear_slider.launch.py  linear_slider_sim_gazebo.launch.py  linear_slider_velocity.launch.py  test_joint_trajectory_controller.launch.py  test_velocity_controller.launch.py
linear_slider_bringup/scripts/: delay_joint_state_broadcaster_lifecycle_node.py  io_manager_node.py  mock_hardware_limit_switch_state_publisher.py  sim_time_publisher.py  user_control_node.py
linear_slider_bringup/test/: test_controller.py
linear_slider_controller/: CMakeLists.txt  linear_slider_controller.xml  package.xml
linear_slider_controller/include/linear_slider_controller/: clearcore_comms.hpp  linear_slider_controller.hpp  linear_slider_controller_compiler.h  linear_slider_hardware_interface.hpp  linear_slider_system_interface.hpp  teknic_motor.hpp  visibility_control.h
linear_slider_controller/launch/: launch_robot.launch.py
linear_slider_controller/src/: clearcore_comms.cpp  linear_slider_system_interface.cpp  teknic_motor.cpp
linear_slider_controllers/: CMakeLists.txt  README.md  controller_plugins.xml  package.xml
linear_slider_controllers/config/: combined_controllers.yaml  linear_slider_controllers.yaml
linear_slider_controllers/include/linear_slider_controllers/: combined_controller.hpp  limit_switch_broadcaster.hpp  limit_switch_state_broadcaster.hpp  scaled_joint_trajectory_controller.hpp
linear_slider_controllers/launch/: combined_controller.launch.py
linear_slider_controllers/src/: combined_controller.cpp  limit_switch_broadcaster.cpp  limit_switch_broadcaster_parameters.yaml  limit_switch_state_broadcaster.cpp  limit_switch_state_broadcaster_parameters.yaml  linear_slider_control_node.cpp  scaled_joint_trajectory_controller.cpp
linear_slider_description/: .setup_assistant  CMakeLists.txt  README.md  package.xml
linear_slider_description/config/: initial_positions.yaml  initial_state.yaml  joint_limits.yaml  kinematics.yaml  linear_slider.ros2_control.xacro  linear_slider.srdf  linear_slider.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
linear_slider_description/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  view_linear_slider.launch.py  warehouse_db.launch.py
linear_slider_description/meshes/: 7thlink_fixed.STL  7thlink_move.STL
linear_slider_description/rviz/: linear_slider.rviz
linear_slider_description/urdf/: linear_slider.urdf  linear_slider.urdf.xacro  linear_slider_base.urdf.xacro  linear_slider_urdf.xacro  linear_slider_velocity.urdf  linear_slider_velocity.urdf.xacro  test.linear_slider.urdf  test.sdf
linear_slider_description/urdf/linear_slider/: linear_slider.ros2_control.xacro  linear_slider_macro.xacro  linear_slider_velocity.ros2_control.xacro
linear_slider_description/urdf/macro/: linear_slider.ros2_control.xacro  linear_slider_base.urdf.xacro  linear_slider_macro.xacro
linear_slider_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
linear_slider_moveit/config/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  linear_slider.ros2_control.xacro  linear_slider.srdf  linear_slider.urdf.xacro  linear_slider_servo.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur_servo.yaml  ur_with_linear_slider.ros2_control.xacro  ur_with_linear_slider.srdf  ur_with_linear_slider.urdf.xacro
linear_slider_moveit/config/tmp/: tmp_kinematics.yaml
linear_slider_moveit/launch/: demo.launch.py  linear_slider_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
linear_slider_moveit/linear_slider_moveit/: launch_common.py
linear_slider_moveit/srdf/: linear_slider.srdf  linear_slider.srdf.xacro  linear_slider_macro.srdf.xacro  test.srdf
linear_slider_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
linear_slider_moveit_config/config/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  linear_slider_servo.yaml  moveit_controllers.yaml  ompl_planning.yaml  trajectory.yaml
linear_slider_moveit_config/config/tmp/: tmp_kinematics.yaml
linear_slider_moveit_config/launch/: linear_slider_moveit.launch.py
linear_slider_moveit_config/rviz/: linear_slider_moveit.rviz
linear_slider_moveit_config/srdf/: linear_slider.srdf.xacro  linear_slider_macro.srdf.xacro  test.linear_slider.srdf
ur_with_linear_slider_bringup/: CMakeLists.txt  package.xml
ur_with_linear_slider_bringup/config/: system_controllers.yaml
ur_with_linear_slider_bringup/launch/: system.launch.py  view_system.launch.py
ur_with_linear_slider_bringup/rviz/: ur_with_linear_slider.rviz
ur_with_linear_slider_bringup/scripts/: user_control_node.py
ur_with_linear_slider_bringup/urdf/: ur_with_linear_slider.urdf  ur_with_linear_slider.urdf.xacro
ur_with_linear_slider_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_with_linear_slider_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  servo.yaml  ur_with_linear_slider.ros2_control.xacro  ur_with_linear_slider.srdf  ur_with_linear_slider.urdf.xacro
ur_with_linear_slider_moveit_config/launch/: system_moveit_config.launch.py
ur_with_linear_slider_moveit_config/rviz/: ur_with_linear_slider_moveit.rviz
ur_with_linear_slider_moveit_config/srdf/: system.srdf.xacro  system_macro.srdf.xacro  ur_with_linear_slider.srdf.xacro
(+55 files in other folders)
