<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_with_linear_slider_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the UR5 with the linear slider.</description>
  <maintainer email="luke.strohbehn@gmail.com">lukestroh</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>linear_slider_controllers</depend>
  <depend>linear_slider_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
